syn-state-machine/src/impls/snapshots/syn_state_machine__impls__tuple__tests__it_matches_2_tuple.snap
---
source: syn-state-machine/src/impls/tuple.rs
expression: "crate::parse::<(Ident, FIdent<\"world\">)>(::quote::quote! { hello world })"
---
Ok(
    (
        (
            Ident(
                hello,
            ),
            FIdent(
                Ident(
                    world,
                ),
            ),
        ),
        0,
    ),
)
