syn-state-machine/src/impls/snapshots/syn_state_machine__impls__tuple__tests__it_only_steps_back_on_fail_for_options.snap
---
source: syn-state-machine/src/impls/tuple.rs
expression: "crate::parse::<(Option<Ident>, Option<Punct>)>(::quote::quote! { hi })"
---
Ok(
    (
        (
            Some(
                Ident(
                    hi,
                ),
            ),
            None,
        ),
        0,
    ),
)
