syn-state-machine/src/impls/snapshots/syn_state_machine__impls__tuple__tests__it_steps_back_for_multi_tuples.snap
---
source: syn-state-machine/src/impls/tuple.rs
expression: "crate::parse::<(Option<Ident>, Option<Punct>, Option<Ident>,\n        Option<Punct>)>(::quote::quote! { hi < > })"
---
Ok(
    (
        (
            Some(
                Ident(
                    hi,
                ),
            ),
            Some(
                Punct {
                    char: '<',
                    spacing: Alone,
                },
            ),
            None,
            Some(
                Punct {
                    char: '>',
                    spacing: Alone,
                },
            ),
        ),
        0,
    ),
)
