syn-state-machine/src/impls/snapshots/syn_state_machine__impls__tuple__tests__it_steps_back_for_options.snap
---
source: syn-state-machine/src/impls/tuple.rs
expression: "crate::parse::<(Option<Ident>, Option<Punct>)>(::quote::quote! { < })"
---
Ok(
    (
        (
            None,
            Some(
                Punct {
                    char: '<',
                    spacing: Alone,
                },
            ),
        ),
        0,
    ),
)
