syn-state-machine/src/impls/snapshots/syn_state_machine__impls__tuple__tests__it_sums_tuple_backtracking.snap
---
source: syn-state-machine/src/impls/tuple.rs
expression: "crate::parse::<(Vec<(Punct, Punct, Ident, Ident)>,\n        Punct)>(::quote::quote! { >> h1 h2 >> h3 h4! })"
---
Ok(
    (
        (
            [
                (
                    Punct {
                        char: '>',
                        spacing: Joint,
                    },
                    Punct {
                        char: '>',
                        spacing: Alone,
                    },
                    Ident(
                        h1,
                    ),
                    Ident(
                        h2,
                    ),
                ),
                (
                    Punct {
                        char: '>',
                        spacing: Joint,
                    },
                    Punct {
                        char: '>',
                        spacing: Alone,
                    },
                    Ident(
                        h3,
                    ),
                    Ident(
                        h4,
                    ),
                ),
            ],
            Punct {
                char: '!',
                spacing: Alone,
            },
        ),
        0,
    ),
)
